New tables mefarshim

--- a/ImportsData/TalmudBavli/shas_html/01-berachot/016-berachot.9.2.html
+++ b/ImportsData/TalmudBavli/shas_html/01-berachot/016-berachot.9.2.html
@@ -576,7 +576,7 @@ html>body #outer{height:auto}/* not ie6- */
                         רשי
                     </legend>
                     <div class="shastext3">
-                        span class="five">אותו צדיק. </span>אברהם: <span class="five">כמצודה שאין בה דגן. </span>דרך ציידי עופות לזרוק
+                        <span class="five">אותו צדיק. </span>אברהם: <span class="five">כמצודה שאין בה דגן. </span>דרך ציידי עופות לזרוק
 דגן תחת מצודות כדי שיבאו עופות ונלכדין וכשאין בה דגן אין עוף
 פונה אליה כך ריקנו המצרים מכל ממונם. וינצלו כתרגומו ורוקינו:
 <span class="five">כמצולה שאין בה דגים. </span>כמו מצולות ים כלומר בתוך התהום אין
