Some changes in html files and new Readme file

--- a/ImportsData/TalmudBavli/shas_html/03-eruvin/074-eruvin.38.2.html
+++ b/ImportsData/TalmudBavli/shas_html/03-eruvin/074-eruvin.38.2.html
@@ -655,7 +655,7 @@ html>body #outer{height:auto}/* not ie6- */
 הרי זה תרומת מעשר לכשתחשך
 דבריו קיימין ואם אמר עירבו לי בה
 לא אמר כלום אלמא סוף היום קונה
-עירוב ואכתי טבל הוא: </span>ה"ג <span class="five">אלא
+עירוב ואכתי טבל הוא: ה"ג <span class="five">אלא
 הא דתנן ר' אליעזר כו'. </span>הא בעינן
 סעודה הראויה מבעוד יום וליכא:
 <span class="five">מערב אדם שני עירובין. </span>וקס"ד זה
