--- a/ImportsData/TalmudBavli/shas_html/07-sukah/110-sukah.56.2.html
+++ b/ImportsData/TalmudBavli/shas_html/07-sukah/110-sukah.56.2.html
@@ -513,7 +513,7 @@ html>body #outer{height:auto}/* not ie6- */
                         רשי
                     </legend>
                     <div class="shastext3">
-                        <span class="shastitle7">גמ'</span> </span><span class="five">והני תרתי מאי עבידתייהו. </span>אדר' יהודה קאי דאמר הנכנס
+                        <span class="shastitle7">גמ'</span> <span class="five">והני תרתי מאי עבידתייהו. </span>אדר' יהודה קאי דאמר הנכנס
 נוטל שבע: <span class="five">בשכר הגפת דלתות. </span>שמשמר הנכנס מגיף
 הדלתות ערבית שפתח אותן משמר היוצא: <span class="five">ונימא ליה. </span>יוצא לנכנס:
 <span class="five">דל בדל. </span>הסר חוק זה מכאן בשביל שיסירוהו אצלך אם תטול עכשיו
