--- a/ImportsData/TalmudBavli/shas_html/17-nazir/002-nazir.2.2.html
+++ b/ImportsData/TalmudBavli/shas_html/17-nazir/002-nazir.2.2.html
@@ -551,8 +551,8 @@ html>body #outer{height:auto}/* not ie6- */
 במתניתין כלל אלא חסורי מחסרא
 לה ותני ידות להא מלתא נמי תריץ
 לה ואקדים נמי ותני ידות ברישא כל ידות נדרים כנדרים וכל כינויי
-נדרים כנדרים ולהכי מפרש ידות ברישא והדר כינויין: האומר
-אהא הרי זה נזיר ואמאי דלמא אהא בתענית קאמר: <span class="five">לימא
+נדרים כנדרים ולהכי מפרש ידות ברישא והדר כינויין: <span class="five">האומר
+אהא הרי זה נזיר ואמאי דלמא אהא בתענית קאמר: לימא
 דקסבר שמואל ידים שאין מוכיחות ו) . </span>כלומר מדקא מוקים לה
 שמואל כגון שהיה נזיר עובר לפניו הא לאו הכי ליכא לספוקי בנזיר
 כלל דקסבר ידים שאין מוכיחות לא הויין ידים והא איפכא שמעינן
