--- a/ImportsData/TalmudBavli/shas_html/30-menachot/099-menachot.51.1.html
+++ b/ImportsData/TalmudBavli/shas_html/30-menachot/099-menachot.51.1.html
@@ -636,7 +636,7 @@ html>body #outer{height:auto}/* not ie6- */
                         רשי
                     </legend>
                     <div class="shastext3">
-                        <span class="five">רבא אמר. </span>על מחבת מלמד שטעונה כלי שרת טו] (הוא) ואפי' מודדו
+                        <span class="five">רבא אמר על מחבת מלמד שטעונה כלי. </span> שרת טו] (הוא) ואפי' מודדו
 בחצי עשרון שאינו נמשח על כרחך אפייתו מיהא במחבת כלי
 שרת הוא: טז] <span class="five">[ואי אפי לה מאתמול מיפסל ליה בלינה]. </span>דאפי'
 מנחות משקדשו בכלי נפסלו בלינה במסכת מעילה <span class="mareimakom">(דף ט.)</span>: ה"ג
@@ -646,7 +646,7 @@ html>body #outer{height:auto}/* not ie6- */
 לישנא אחרינא ונאמר במנחת נסכים
 שמן והיינו הך: <span class="five">ג' לוגין לעשרון.
 </span>דרובע ההין יח] ג' לוגין דהין י"ב
-לוגין: <span class="five">במנחת נדבה. </span>נאמר <span class="mareimakom">(ויקרא
+לוגין: <span class="five">במנחת נדבה נאמר. </span> <span class="mareimakom">(ויקרא
 ב)</span> ויצק עליה שמן מה להלן לוג אחד
 כדאמר לקמן <span class="mareimakom">(דף פח.)</span> למנחה ולוג
 שמן ולקמן פריך והיכי מצי למידייניה
