Change html file and python code rashi to XML

--- a/ImportsData/TalmudBavli/shas_html/08-beitzah/022-beitzah.12.2.html
+++ b/ImportsData/TalmudBavli/shas_html/08-beitzah/022-beitzah.12.2.html
@@ -570,7 +570,7 @@ html>body #outer{height:auto}/* not ie6- */
 לפרוכי. </span>השרביטין ולהוציא הזרע
 ביום טוב מי שרי בי"ט כשחיטה
 וכבישול או דלמא כיון דאפשר מערב יו"ט לא דתולדת דישה הוא: <span class="five">מוללין מלילות. </span>דדש כלאחר יד הוא ואפילו בשבת לאו דאורייתא הוא אלא
-מדרבנן וביום טוב לא גזור: <span class="five">מלילות. </span>של חטין שמולל בידיו כשהן רכים: גבי שבת גרסי' <span class="five">מיד ליד </span>וגבי יום טוב גרסי' <span class="five">על יד על יד</span>: <span class="five">מיד
+מדרבנן וביום טוב לא גזור: <span class="five">מלילות. </span>של חטין שמולל בידיו כשהן רכים: גבי שבת גרסי' מיד ליד וגבי יום טוב גרסי' על יד על יד: <span class="five">מיד
 ליד. </span>שלא כדרך חול: <span class="five">קנון. </span>כלי הוא ראשו אחד רחב והשני עשוי כעין מרזב קצר ונותן הקטניות בתוך הרחב ומנענע והאוכל מתגלגל
 דרך המרזב והפסולת נשאר בכלי: <span class="five">תמחוי. </span>קערה גדולה: <span class="five">על יד על יד. </span>מעט מעט: <span class="five">אבל לא בטבלא כו'. </span>דמחזי כמאן דעביד לצורך
 מחר שאין דרך לעשות בכלים הללו אלא הרבה: <span class="five">מערב יו"ט אין. </span>המולל מערב יום טוב קתני ולא קתני המולל ביו"ט: <span class="five">אם כן. </span>דמוללין
