--- a/ImportsData/TalmudBavli/shas_html/30-menachot/016-menachot.9.2.html
+++ b/ImportsData/TalmudBavli/shas_html/30-menachot/016-menachot.9.2.html
@@ -630,7 +630,7 @@ html>body #outer{height:auto}/* not ie6- */
                         רשי
                     </legend>
                     <div class="shastext3">
-                        span class="five">מנחה מאי עבידתה. </span>מאי טו] זריקה יש במנחה: <span class="five">במנחת נסכים.
+                        <span class="five">מנחה מאי עבידתה. </span>מאי טו] זריקה יש במנחה: <span class="five">במנחת נסכים.
 </span>הבאים עם הזבח אם אבד חלב ובשר של זבח ומנחה קיימת לא יזרוק
 הדם מן המנחה: <span class="five">והרים הכהן מן המנחה את אזכרתה והקטיר
 המזבחה. </span>עד דאיתא לכולה טז] קיימת ואי לא לא יקטיר (את
