--- a/ImportsData/TalmudBavli/shas_html/30-menachot/115-menachot.59.1.html
+++ b/ImportsData/TalmudBavli/shas_html/30-menachot/115-menachot.59.1.html
@@ -699,7 +699,7 @@ html>body #outer{height:auto}/* not ie6- */
 </span> מנחת כהנים בלול: <span class="five">בלוג. </span>בכל המנחות סגי בחד לוג [לעשרון] ומנחת נסכים יח] יש ג' [לוגין] לעשרון: <span class="five">מוגש. </span>עומר ושאר מנחות
 טעונות הגשה ולא מנחת נסכים כדמפרש במתני': <span class="five">בגלל עצם. </span>עומר ומנחת כהנים באות בגלל עצמן ומנחת נסכים באה בגלל זבח: <span class="five">מנחת
 נסכים. </span>ציבור היא שהרי באה עם התמידין ועומר נמי ציבור ושתיהן חובה ודוחות שבת וטומאה: <span class="five">מסתברא נפש. </span>במנחת סלת כתיב
-נפש וכתיב לבונה ומהתם גמרינן לכל מנחת יחיד שטעונה לבונה: <span class="five">אי אמרת בשלמא לרבות שפיר. </span>דסד"א שעה מדורות לא ילפינן קמ"ל:
+נפש וכתיב לבונה ומהתם גמרינן לכל מנחת יחיד שטעונה לבונה: <span class="five">אי אמרת בשלמא לרבות שפיר. </span>דסד"א שעה מדורות לא ילפינן קמ"ל.
  שתי
                     </div>
                 </fieldset>
