Update python code and update HTML files

--- a/ImportsData/TalmudBavli/shas_html/30-menachot/194-menachot.98.2.html
+++ b/ImportsData/TalmudBavli/shas_html/30-menachot/194-menachot.98.2.html
@@ -696,7 +696,7 @@ html>body #outer{height:auto}/* not ie6- */
 כתיב <span class="mareimakom">(שמות כו)</span> על צלע צפון: <span class="five">ותו שולחן דמשה. </span>דאמרן לעיל באמצע מונח טו] היכי מונח: <span class="five">ולמאן דאמר נמי מזרח ומערב שולחן
 דמשה היכא מנח. </span>אישתכח דיתיב הך שלחן כולו בעשרים אמות חיצוניות והשתא מתרץ לכולהו פירכי: <span class="five">מי סברת בחד דרא הוו
 יתבי. </span>כולהו עשר ראשה של זו בצד ראשה של זו: <span class="five">בתרי דרי הוו יתבי. </span>חמשה מינייהו ראשה של זו בצד ראשה של זו ושל משה
-אצלן לפניהם ולא בשורתן ושורה אחרת של חמשה אצל אותה של משה ולא בשורתה ואותם ה' ראשה של זו בצד ראשה של זו:
+אצלן לפניהם ולא בשורתן ושורה אחרת של חמשה אצל אותה של משה ולא בשורתה ואותם ה' ראשה של זו בצד ראשה של זו.
  למ"ד
                     </div>
                 </fieldset>
