Update python code rashi to XML and Readme.txt

--- a/ImportsData/TalmudBavli/shas_html/02-shabbat/060-shabbat.31.2.html
+++ b/ImportsData/TalmudBavli/shas_html/02-shabbat/060-shabbat.31.2.html
@@ -792,7 +792,7 @@ html>body #outer{height:auto}/* not ie6- */
 שלא הובהבה מבעוד יום דכיבוי זה צריך לגופו שיהא הלהב נוח לאחוז בה כשיבא להדליקה: <span class="five">שהוא עושה פחם. </span>שהוא מתכוין ממש
 לעשותה כמין פחם עכשיו אלמא בכבוי הצריך לגופו מיירי ולא קתני שנעשית פחם מתחלתו שהובהבה דנמצי למימר טעמא משום דבת
 בנין היא דאיכא בנין במקום סתירה מה שאין כן בשמן ונר דלא שייך בהו בנין וסתירה: <span class="shastitle7">מתני'</span> <span class="five">בשעת לידתן. </span>בגמרא מפרש
-מאי שנא שעת לידתן: <span class="shastitle7">גמ'</span> <span class="five">הכי גרסינן בנדה מאי טעמא: <span class="five">בחדרי בטנה. </span>מקור דמה: <span class="five">קלקלה. </span>מרדה: <span class="five">רביעית דם. </span>חיי אדם תלויין בה:
+מאי שנא שעת לידתן: <span class="shastitle7">גמ'</span> הכי גרסינן בנדה מאי טעמא: <span class="five">בחדרי בטנה. </span>מקור דמה: <span class="five">קלקלה. </span>מרדה: <span class="five">רביעית דם. </span>חיי אדם תלויין בה:
  ראשית
                     </div>
                 </fieldset>
