--- a/ImportsData/TalmudBavli/shas_html/02-shabbat/182-shabbat.92.2.html
+++ b/ImportsData/TalmudBavli/shas_html/02-shabbat/182-shabbat.92.2.html
@@ -776,7 +776,7 @@ html>body #outer{height:auto}/* not ie6- */
 מוציאין כן: <span class="five">שכן לבלרי מלכות עושין
 כן. </span>בדעתו למוסרן לזה ואין מוצאו
 ודבר המלך נחוץ ומצא אחר ומוסרו
-לו: <span class="five">מתני' <span class="five">הוציאו שנים פטורין.
+לו: <span class="five">הוציאו שנים פטורין.
 </span>כדילפינן בעשותה יחיד ולא שנים:
 <span class="five">חייבים. </span>וטעמא מפרש בגמרא:
 <span class="shastitle7">גמ'</span> <span class="five">זה יכול. </span>להוציאו לבדו וזה יכול
