--- a/ImportsData/TalmudBavli/shas_html/06-yiuma/002-yiuma.2.2.html
+++ b/ImportsData/TalmudBavli/shas_html/06-yiuma/002-yiuma.2.2.html
@@ -592,8 +592,8 @@ html>body #outer{height:auto}/* not ie6- */
 לשמש איש יומו שיפרשו כל בית אב
 שבעת ימים קודם היום הקבוע לו:
 <span class="five">דבר הקבוע לו זמן. </span>יוה"כ מדבר
-הקבוע לו זמן המלואים שנאמר: <span class="mareimakom">(שמות
-מ)</span> ביום החדש הראשון באחד לחדש
+הקבוע לו זמן המלואים שנאמר (שמות
+מ) ביום החדש הראשון באחד לחדש
 תקים וגו' והוא היה שמיני למילואים:
 <span class="five">הנוהג פעם אחת בשנה. </span>מלואים
 פעם אחת הוא דהוו בשנה: <span class="five">אי חג
