--- a/ImportsData/TalmudBavli/shas_html/09-rosh_hashanah/041-rosh_hashanah.22.1.html
+++ b/ImportsData/TalmudBavli/shas_html/09-rosh_hashanah/041-rosh_hashanah.22.1.html
@@ -490,7 +490,7 @@ html>body #outer{height:auto}/* not ie6- */
                     </legend>
                     <div class="shastext3">
                         מעשה ועברו יותר מארבעים זוג וכו': <span class="five">שזפר. </span>כך שמו:
-<span class="shastitle7">מתני'</span> </span><span class="five">אב ובנו שראו את החדש כו': <span class="five">שאם יפסל. </span>יכשל בפיו
+<span class="shastitle7">מתני'</span> <span class="five">אב ובנו שראו את החדש כו': שאם יפסל. </span>יכשל בפיו
 כשיבדקוהו כדלקמן (דף כג:) : <span class="shastitle7">גמ'</span> <span class="five">תהא כשרה בכם.
 </span>ואע"פ שהם אחים: <span class="five">תהא מסורה לכם. </span>לחשובי הדור אני מוסר
 שיקבלו העדות ויקדשו החדש ולא
@@ -503,7 +503,7 @@ html>body #outer{height:auto}/* not ie6- */
 לא אמר לך מידי כי אמרת הלכה
 כרבי (יוסי) דהיינו דר' (שמעון):
 <span class="shastitle7">מתני'</span> </span><span class="five">אלו הן הפסולין כו':
-<span class="five">בקוביא. </span>חתיכות של עצם
+בקוביא. </span>חתיכות של עצם
 שמשחקין בערבון ואמור רבנן
 אסמכתא לא קניא והרי הן גזלנין
 מדרבנן דמדאורייתא אינו קרוי
@@ -531,7 +531,7 @@ html>body #outer{height:auto}/* not ie6- */
 חכמים לעדות אשה ואע"פ שהכשירו
 את העבד ואת האשה דפסולי
 דאורייתא: <span class="shastitle7">מתני'</span> <span class="five">מי שראה את
-החדש כו': <span class="five">מרכיבין אותו. </span>אף
+החדש כו': מרכיבין אותו. </span>אף
 בשבת: <span class="five">ואם צודה להם. </span>אם יש
 אורבים בדרך כמו ואתה צודה את
 נפשי <span class="mareimakom">(שמואל א כד)</span> והבייתוסים
