--- a/ImportsData/TalmudBavli/shas_html/32-bechorot/106-bechorot.54.2.html
+++ b/ImportsData/TalmudBavli/shas_html/32-bechorot/106-bechorot.54.2.html
@@ -603,7 +603,7 @@ html>body #outer{height:auto}/* not ie6- */
 בתוך ט"ז מיל ואותן שבצד שני רחוקות יותר מט"ז מיל אותן הרחוקות פטורות לגמרי ואינן צריכות להמתין עד שיולדו לו עוד טלאים
 להצטרף לגורן אחר: <span class="five">דהנך ה'. </span>אמצעיות חזיין להכא ולהכא דכל צד דמצטרפת להו איכא שיעור מעשר אבל אם יש מכאן ה' ומכאן ד'
 ובאמצע ה' אין הד' מצטרפות ואין צריכות להמתין לגורן אחר: <span class="five">ה' מכאן וה' מכאן ואחת באמצע. </span>אע"ג דהך חדא לא חזיא למנינא הואיל ורועה
-אורחיה למיזל התם ואיתויי ט] הויא כמאן דקאי התם וקרינא ביה מונה וכ"ש ד' מכאן וה' מכאן ואחת באמצע דהך חזיא לצירופא דמניינא.
+אורחיה למיזל התם ואיתויי ט] הויא כמאן דקאי התם וקרינא ביה מונה וכ"ש ד' מכאן וה' מכאן ואחת באמצע דהך חזיא לצירופא דמניינא:
  מכפר
                     </div>
                 </fieldset>
