--- a/ImportsData/TalmudBavli/shas_html/33-arachin/023-arachin.13.1.html
+++ b/ImportsData/TalmudBavli/shas_html/33-arachin/023-arachin.13.1.html
@@ -501,7 +501,7 @@ html>body #outer{height:auto}/* not ie6- */
 ולחילוק: <span class="shastitle7">מתני'</span> <span class="five">מתשעה כנורות.
 </span>לא אתפרש טעמא: <span class="five">והצלצל לבדו.
 </span>צלצל אחד היה שם ולא יותר וטעמא
-מפרש בגמ': <span class="shastitle7">גמ'</span> קס"ד כדי
+מפרש בגמ': <span class="shastitle7">גמ'</span> </span> קס"ד כדי
 לשבת ולשני ימים טובים דווקא קאמר
 דלהכי בעינן ששה שאם יבאו יחד שבת
 ושני ימים טובים של ראש השנה ולא
