--- a/ImportsData/TalmudBavli/shas_html/35-kritut/018-kritut.10.2.html
+++ b/ImportsData/TalmudBavli/shas_html/35-kritut/018-kritut.10.2.html
@@ -523,7 +523,7 @@ html>body #outer{height:auto}/* not ie6- */
 וקדשיו וע"כ דלי דלות מדלות דידהו מילף וכי היכי דדלות דידהו שתי פרידין תחת הכבש דהיינו חד מי"ו בדלות ונהי דאשכחת בדלות
 בעלמא כגון ביולדת שהיא פרידה אחת שמינית של דינר דהיינו כ"ד פרוטות וכי מייתי דלי דלות חד מי"ו הוי פרוטה ופלגא: <span class="five">כולה מיולדת
 יליף. </span>ואע"ג דאין בה דלי דלות יליף מהתם דכי היכי דאשכחן בה דלות אחד מל"ב דעשירות דלי דלות נמי הוה חד מל"ב דדלות ודלות דיולדת
-הכי הוו כ"ד פרוטות ודלי דלות פרוטה נכי רבעא דהיינו חד מל"ב: <span class="shastitle7">מתני'</span> כל חטאת יחיד נקבה היא דהיינו כשבה או שעירה: <span class="five">שוין
+הכי הוו כ"ד פרוטות ודלי דלות פרוטה נכי רבעא דהיינו חד מל"ב: <span class="shastitle7">מתני'</span> </span>כל חטאת יחיד נקבה היא דהיינו כשבה או שעירה: <span class="five">שוין
 במכות ובקרבן. </span>אם מזידין שניהן לוקין כדקיי"ל איש או אשה כי יעשו מכל חטאת האדם וגו' השוה הכתוב אשה לאיש לכל העונשין ואם
 שוגגין שניהם מביאין קרבן דבתרווייהו כתיב כרת במזיד דכתיב ונכרתו הנפשות העושות וכל שזדונו כרת שגגתו חטאת: <span class="five">ובשפחה כו'.
 </span>שהאשה לוקה והאיש באשם כדמפרש בגמ': <span class="five">כל העריות כולן עשה בהן מערה כגומר. </span>במסכת יבמות בפרק הבא על יבמתו <span class="mareimakom">(דף נג:)</span>:
